--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,6 @@
     "angular": "1.2.x",
     "angular-route": "1.2.x",
     "jquery": "1.10.2",
-    "bootstrap": "~3.1.1",
+    "bootstrap": "~3.1.1"
   }
 }
