--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"dependencies": {
 		"express": "4.4.3",
 		"mysql": "2.3.2",
-        "body-parser": "1.3.1"
+        "body-parser": "1.3.1",
+        "basic-auth": "1.0.0"        
 	},
 	"devDependencies": {
     "karma": "~0.10",
