--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular-route": "1.2.x",
     "angular-mocks": "~1.2.x",
     "jquery": "1.10.2",
-    "bootstrap": "~3.1.1"
+    "bootstrap": "~3.1.1",
+    "ngInfiniteScroll": "1.0.0",
   }
 }
