--- a/package.json
+++ b/package.json
@@ -1,22 +1,20 @@
 {
 	"name": "theBeautyOfData",
-	"description": "our app for the BoD concept",
-	"version": "0.0.1",
+	"description": "app for the BoD concept",
+	"version": "1.0.0",
 	"private": true,
 	"dependencies": {
 		"express": "4.4.3",
 		"mysql": "2.3.2",
-        "body-parser": "1.3.1",
-        "basic-auth": "1.0.0"        
+        "body-parser": "1.3.1"
 	},
 	"devDependencies": {
-    "karma": "~0.10",
-    "protractor": "~0.20.1",
-    "http-server": "^0.6.1",
-    "bower": "^1.3.1",
-    "shelljs": "^0.2.6",
-    "karma-junit-reporter": "^0.2.2"
-  },
+        "karma": "~0.10",
+        "protractor": "~0.20.1",
+        "bower": "^1.3.1",
+        "shelljs": "^0.2.6",
+        "karma-junit-reporter": "^0.2.2"
+    },
  	"scripts": {
     "postinstall": "bower install",
 
